--- a/react-components/package.json
+++ b/react-components/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.11.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
