feat: add cards base on rick and morty API

--- a/react-components/.eslintrc.json
+++ b/react-components/.eslintrc.json
@@ -62,7 +62,8 @@
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-var-reqiures": "off",
     "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "quote-props": [1, "as-needed"]
   },
   "settings": {
     "react": {
